src/objects/LG_ProfileExtensions__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting is used for adding any user of profile specific settings.</description>
    <fields>
        <fullName>LG_DWHUser__c</fullName>
        <description>Flags if this user / profile is used for data uploads from the Data Ware House (DWH) which is used in validation rules to bypass read-only fields.
1: Yes, this user or profile is a DWH user
0/blank: No, this user or profile is not a DWH user</description>
        <label>DWH User</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_DataUpload__c</fullName>
        <description>Flags if this user/profile is used for data upload which is used to bypass Duplicate Record checking for Visit Address.
 1: Yes, this user/profile is allowed to make Data Uploads which might contain duplicate records for Visit Address. 
0/blank: No, this user/profile is not allowed to make Data Uploads which might contain duplicate records for Visit Address.</description>
        <label>Data Upload</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_MarketingProfileUser__c</fullName>
        <description>Flags if this user / profile is used for data upload from SiZo and D&amp;B which is used to bypass read-only fields on Profile. 
1: Yes, this user or profile is allowed to make Marketing Data Uploads. 
0/blank: No, this user or profile is not allowed to make Marketing Data Uploads.</description>
        <label>Marketing Profile User</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Profile Extensions</label>
</CustomObject>